testdata/baselines/reference/submodule/compiler/functionMergedWithModule.errors.txt
functionMergedWithModule.ts(12,9): error TS2304: Cannot find name 'Bar'.


==== functionMergedWithModule.ts (1 errors) ====
    function foo(title: string) {
        var x = 10;
    }
    
    module foo.Bar {
        export function f() {
        }
    }
    
    module foo.Baz {
        export function g() {
            Bar.f();
            ~~~
!!! error TS2304: Cannot find name 'Bar'.
        }
    }